# mcp-server-FastMCP-FastAPI-MCP

./: .gitignore  README.md  pyproject.toml
Scenario1/: calculator.py
Scenario2/: calculator_api.py
Scenario3/: feed_mcp.py
deployment/: DEPLOYMENT.md  feed.py  requirements_deploy.txt
